# web-server

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.h  Dockerfile  File.cpp  File.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  Json.cpp  Json.h  PathHandler.cpp  PathHandler.h  README.md  Socket.cpp  Socket.h  WebServer.cpp  WebServer.h  main.cpp  path-parsing.js
base/: ByteBuffer.cpp  ByteBuffer.h  ErrorOr.h  GenericParser.cpp  GenericParser.h  HashTable.h  Json.cpp  Json.h  LinkedList.h  RefPointer.h  String.cpp  String.h  StringView.cpp  StringView.h  Variant.h  Vector.h
build-WebServer-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
build-WebServer-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-81f25da45e7a2e6962e6.json  cmakeFiles-v1-0e9804f68ce49673d2c8.json  codemodel-v2-3c68d654c67d23c1668e.json  index-2022-12-25T11-38-37-0016.json  target-WebServer-Debug-f04ccfe7177c97a1e2be.json
output/: CMakeCache.txt  Makefile  cmake_install.cmake
output/public/: data.json  index.html
tests/: variant  variant.cpp
